--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://indra0421.github.io/personal_to_do_myself",
+  "homepage": "https://indra0421.github.io",
   "name": "todos",
   "version": "0.1.0",
   "private": true,
